apps/obsidian-livesync/manifests/service-couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync-svc-couchdb
  labels:
    app: couchdb
    app.kubernetes.io/instance: obsidian-livesync
    chart: couchdb-4.6.2
    heritage: Helm
    release: obsidian-livesync
spec:
  type: ClusterIP
  selector:
    app: couchdb
    release: obsidian-livesync
  ports:
    - name: couchdb
      port: 5984
      protocol: TCP
      targetPort: 5984
