apps/obsidian-livesync/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-livesync-ingress
  namespace: obsidian
  labels:
    app.kubernetes.io/instance: obsidian-livesync
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - obsidian.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: obsidian.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian-livesync-svc-couchdb
                port:
                  number: 5984
